RESOLVED FIXED155033
REGRESSION (r197531): JavaScriptCore ASan build fails due to weak external symbol
https://bugs.webkit.org/show_bug.cgi?id=155033
Summary REGRESSION (r197531): JavaScriptCore ASan build fails due to weak external sy...
David Kilzer (:ddkilzer)
Reported 2016-03-04 12:42:45 PST
JavaScriptCore ASan build fails due to weak external symbol: PhaseScriptExecution Check For Weak VTables and Externals ERROR: JavaScriptCore has a weak external symbol in it (/Volumes/Data/BuildSlave/Monarch-WebKitASan/build/OpenSource/WebKitBuild/Debug-iphonesimulator/JavaScriptCore.framework/JavaScriptCore) ERROR: A weak external symbol is generated when a symbol is defined in multiple compilation units and is also marked as being exported from the library. ERROR: A common cause of weak external symbols is when an inline function is listed in the linker export file. ERROR: symbol __ZNK3JSC8JSObject19ordinaryToPrimitiveEPNS_9ExecStateENS_22PreferredPrimitiveTypeE This regressed with: Bug 154877: [ES6] Add support for Symbol.toPrimitive <https://bugs.webkit.org/show_bug.cgi?id=154877> <http://trac.webkit.org/changeset/197531>
Attachments
Patch v1 (2.52 KB, patch)
2016-03-04 12:45 PST, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2016-03-04 12:43:53 PST
David Kilzer (:ddkilzer)
Comment 2 2016-03-04 12:45:20 PST
Created attachment 273026 [details] Patch v1
Alexey Proskuryakov
Comment 3 2016-03-04 12:50:41 PST
Comment on attachment 273026 [details] Patch v1 No cq+, since EWS is not done yet.
David Kilzer (:ddkilzer)
Comment 4 2016-03-04 12:53:32 PST
(In reply to comment #3) > Comment on attachment 273026 [details] > Patch v1 > > No cq+, since EWS is not done yet. Huh? EWS doesn't wait for in-flight builds to finish?
Alexey Proskuryakov
Comment 5 2016-03-04 12:59:52 PST
No, it never did. It would try to build itself, but only one configuration.
WebKit Commit Bot
Comment 6 2016-03-04 14:18:00 PST
Comment on attachment 273026 [details] Patch v1 Clearing flags on attachment: 273026 Committed r197590: <http://trac.webkit.org/changeset/197590>
WebKit Commit Bot
Comment 7 2016-03-04 14:18:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.