REGRESSION (r197531): JavaScriptCore ASan build fails due to weak external symbol <http://webkit.org/b/155033> <rdar://problem/24979661>

Reviewed by Alexey Proskuryakov.

* runtime/JSObject.cpp:
(JSC::JSObject::ordinaryToPrimitive): Don't mark this method
inline since it's also used in DatePrototype.cpp, and is
declared as a public class method.
* runtime/JSObject.h:
(JSC::JSObject::ordinaryToPrimitive): Don't export this method
since it is not used outside of JavaScriptCore.


Canonical link: https://commits.webkit.org/173124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197590 268f45cc-cd09-0410-ab3c-d52691b4dbfc